# L1

./: CMakeLists.txt
src/: AST.h  reductions.h  types.h
tests/: create_nodes.cpp  reductions.cpp
